# finance

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start.sh  ux.md
docs/: analyst-architecture-appendix.md  analyst-layer-contract.md  architecture.md  requirements-ledger.md  testing-guide.md  v3-causal-architecture.md
src/ai_analyst/: __init__.py  config.py  logging.py  monitoring.py
src/ai_analyst/api/: __init__.py  server.py  service.py
src/ai_analyst/calibration/: __init__.py  metrics.py  persistence.py
src/ai_analyst/causal/: __init__.py  analog_scoring.py  causal_graph.py  entity_normalization.py  governance.py  interpretation.py  pricing_disagreement.py  regime_engine.py  types.py  versioning.py
src/ai_analyst/cli/: __init__.py  app.py
src/ai_analyst/core/: __init__.py  contracts.py  models.py
src/ai_analyst/events/: __init__.py  context.py  exposures.py  normalization.py  ontology.py  sector_opportunity.py  theme_intensity.py
src/ai_analyst/features/: engineering.py
src/ai_analyst/llm/: __init__.py  context_pack.py  forecast.py  reasoning.py
src/ai_analyst/modeling/: __init__.py  (+2 more)
src/local_ai_analyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_service.py  test_calibration.py  test_causal_graph.py  test_event_normalization.py  test_feature_engineering.py  test_geo_energy_context.py  test_india_shortlist.py  test_llm_forecast.py  test_nightly_report.py  test_nse_source.py  test_paper_trading.py  test_portfolio_allocator.py  test_reasoning.py  test_regime_detection.py  test_sec_source.py  test_snapshot_builder.py  test_tiingo_source.py  test_universe_source.py  test_walkforward.py
(+34 files in other folders)
