[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-analyst"
version = "0.1.0"
description = "Local AI analyst with a point-in-time warehouse, ranking engine, and explainable research workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Anurag Gupta" }
]
dependencies = [
  "duckdb>=1.2.2",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0",
  "requests>=2.32.3",
  "httpx>=0.28.1",
  "PyYAML>=6.0.2",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "typer>=0.15.2",
  "rich>=13.9.4",
  "tenacity>=9.0.0",
  "orjson>=3.10.15",
  "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
v1 = [
  "numpy>=2.2.3",
  "scikit-learn>=1.6.1",
  "lightgbm>=4.6.0",
  "mlflow>=2.19.0",
  "shap>=0.46.0",
]
v15 = [
  "transformers>=4.49.0",
  "torch>=2.6.0",
  "sentence-transformers>=3.4.1",
  "qdrant-client>=1.13.2",
  "ollama>=0.4.7",
]
v2 = [
  "hmmlearn>=0.3.3",
  "mapie>=1.0.0",
  "scipy>=1.15.2",
  "skfolio>=0.7.0",
  "PyPortfolioOpt>=1.5.6",
  "cvxpy>=1.6.1",
  "prefect>=3.2.8",
  "evidently>=0.6.5",
  "ruptures>=1.1.9",
]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.7",
]

[project.scripts]
ai-analyst = "ai_analyst.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_analyst.causal" = ["assets/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
